--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "author": "yellow-strelitzia",
   "license": "ISC",
   "description": "",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1"
+  },
   "devDependencies": {
-    "@types/node": "^12.12.7",
+    "@types/express": "^4.17.6",
+    "@types/node": "^12.12.47",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.0",
-    "ts-node": "^8.4.1",
+    "rimraf": "^3.0.2",
+    "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.2"
+    "typescript": "^3.9.5"
   }
 }
